objects/TEMarketing__OpportunityAttribution__c.object
<CustomObject>
    <description>Object to hold references to the related objects(Opportunity,Campaign &amp; Contact) and the attributed amount</description>
    <fields>
        <fullName>Email__c</fullName>
        <description>Contact Email Address</description>
        <formula>TEMarketing__Contact__r.Email</formula>
        <inlineHelpText>Contact Email Address</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Record_id__c</fullName>
        <label>Energy Record id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <formula>TEXT(TEMarketing__Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Bookings__c</fullName>
        <formula>IF(TEMarketing__Opportunity__r.IsWon, TEMarketing__Opportunity__r.Amount / TEMarketing__Opportunity__r.TEMarketing__Total_Attributions__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecasted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Campaign_Member_ID__c</fullName>
        <label>Campaign Member ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>OpportunityAttributions</relationshipLabel>
        <relationshipName>OpportunityAttributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TEMarketing__CompositeKey__c</fullName>
        <externalId>true</externalId>
        <label>CompositeKey</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OpportunityAttributions</relationshipLabel>
        <relationshipName>OpportunityAttributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMarketing__First_Responded_Date__c</fullName>
        <label>First Responded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TEMarketing__IsClosed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsClosed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__IsWon__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsWon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Marketing_Type__c</fullName>
        <formula>TEXT(TEMarketing__Opportunity__r.TEMarketing__Marketing_Sourced__c)</formula>
        <label>Marketing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Open_Pipeline__c</fullName>
        <formula>IF(TEMarketing__Opportunity__r.IsClosed, 0,  TEMarketing__Opportunity__r.Amount / TEMarketing__Opportunity__r.TEMarketing__Total_Attributions__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Opp_Closed_Date__c</fullName>
        <label>Opp Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Opp_Created_Date__c</fullName>
        <label>Opp Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Opp_Type__c</fullName>
        <label>Opp Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>OpportunityAttributions</relationshipLabel>
        <relationshipName>OpportunityAttributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Probability__c</fullName>
        <label>Probability</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Stage__c</fullName>
        <label>Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Weighted_Number_of_Opps__c</fullName>
        <formula>if(TEMarketing__Opportunity__r.TEMarketing__Total_Attributions__c != 0, (1/TEMarketing__Opportunity__r.TEMarketing__Total_Attributions__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Number of Opps</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>OpportunityAttribution</label>
    <listViews>
        <fullName>TEMarketing__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OAN-{000000}</displayFormat>
        <label>OpportunityAttribution No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OpportunityAttributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>